<resources>
    <string name="app_name">CP192194_AV180327_CM180362_PA210749</string>

    <string name="account">Cuenta</string>
    <string name="menus">Menús</string>
    <string name="new_dish">Nuevo platillo</string>
    <string name="options">Opciones de cuenta</string>
    <string name="breakfasts">Desayunos</string>
    <string name="lunches">Almuerzos</string>
    <string name="dinners">Cenas</string>
    <string name="signin">Iniciar sesión</string>
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="old_password">Vieja contraseña</string>
    <string name="new_password">Nueva contraseña</string>
    <string name="login">Acceder</string>
    <string name="forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="back">Atrás</string>
    <string name="recover_password">Recuperar contraseña</string>
    <string name="request_recover_password">Solicitar recuperación</string>
    <string name="change_password">Cambiar contraseña</string>
    <string name="logout">Cerrar sesión</string>
    <string name="do_change_password">Realizar cambio</string>
    <string name="daymenu">Menu del dia</string>
    <string name="foodform">Agregar Platillo</string>
    <string name="btneliminar">Eliminar</string>
    <string name="btneditar">Editar</string>
</resources>