<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".RecoverPasswordActivity">

    <ImageButton
        android:id="@+id/btnReturn"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="@color/transparent"
        android:contentDescription="@string/back"
        android:padding="10dp"
        android:scaleType="centerInside"
        app:srcCompat="@drawable/ic_return" />

    <TextView
        android:text="@string/recover_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:fontFamily="sans-serif-black"
        android:textSize="28sp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="-120dp"
            android:src="@drawable/logo"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_email"/>

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="20dp" />
        </LinearLayout>


        <Button
            android:id="@+id/btnRequestRecoverPassword"
            android:text="@string/request_recover_password"
            android:layout_width="360dp"
            android:layout_height="60dp"
            android:background="@drawable/radius"
            android:layout_marginTop="10dp"
            android:textColor="@color/secondary"
            android:textSize="20dp"
            app:backgroundTint="@null"/>


    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>